@@ -160,4 +160,19 @@ public class Sensor extends BusinessEntity {
       } else if (other.sensorCommandRef != null && !sensorCommandRef.equalsWithoutCompareOid(other.sensorCommandRef)) return false;
       return true;
    }
+
+   /**
+    * Returns the sensor id offset by a predefined value.
+    * This is used to partition the id space between commands and sensor,
+    * and avoid having id collision.
+    * This is a temporary solution, see MODELER-413 for more details. 
+    * 
+    * @return int sensor id offset by predefine value.
+    */
+   @Transient
+   @JSON(include = false)
+   public long getOffsetId() {
+     return 100000 + getOid();
+   }
+
 }
